cleanup. and spring configuration fixes